--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <link rel="stylesheet" href="css/style.css" media="all">
 <title>ポケモン　6世代　ターン管理</title>
 <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-<script type="text/javascript" src="js/test.js"></script>
+<script type="text/javascript" src="test.js"></script>
 </head>
 
 <body>
